@@ -32,6 +32,8 @@ Rules to check PMD itself
     
     <rule ref="rulesets/strings.xml/UnnecessaryCaseChange"/>
 
+    <rule ref="rulesets/strings.xml/UseEqualsToCompareStrings"/>
+
     <rule ref="rulesets/strings.xml/UselessStringValueOf"/>
 
     <rule ref="rulesets/strings.xml/AppendCharacterWithChar"/>
